# longmen

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release-gateway.yml  release-rag.yml  release-terminal.yml
clients/terminal/: .gitignore  README.md  pyproject.toml
clients/terminal/src/termassist/: app.py  approval.py  cli.py  config.py  connection.py  file_attach.py  history.py  input_handler.py  protocol.py  renderer.py  slash_commands.py  state.py  themes.py  token_display.py
deploy/: .env.example  README.md  compose.yaml
deploy/secrets/: README.md
docs/: GATEWAY_PROTOCOL.md  how-to-add-tools.md
gateway/: .dockerignore  .gitignore  Dockerfile  README.md  gateway.docker.toml  pyproject.toml
gateway/src/assistant/gateway/: agent_loop.py  agent_registry.py  auth.py  compactor.py  config.py  config_watcher.py  context_manager.py  fact_extractor.py  file_indexer.py  permissions.py  planner.py  project_store.py  protocol.py  rag_client.py  request_queue.py  server.py  session.py  session_store.py  vllm_client.py
gateway/src/assistant/gateway/tools/: __init__.py  app_runner.py  base.py  build.py  delete.py  file_read.py  file_write.py  git.py  plan_revision.py  project_detect.py  rag_search.py  shell.py  sql.py  test_runner.py  web_client.py  web_fetch.py  web_search.py
gateway/src/assistant/gateway/tools/symbol_parsers/: __init__.py  cpp.py  python.py  regex_fallback.py  sql.py  treesitter.py  typescript.py
rag/: .dockerignore  Dockerfile  README.md  pyproject.toml  rag.docker.toml  rag.toml.example
rag/src/ragsvc/: __init__.py  api.py  chunker.py  collections.py  config.py  embedder.py  indexer.py  main.py  manifest.py  store.py  tokenizer.py  watcher.py
rag/src/ragsvc/extractors/: __init__.py  base.py  markdown.py  pdf.py  plaintext.py
