[project]
name = "ragsvc"
version = "1.0.0"
description = "RAG service for the terminal coding assistant — semantic search over local documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "qingl0ng", email = "qingl0ng@users.noreply.github.com" }]
keywords = ["rag", "semantic-search", "embeddings", "qdrant", "self-hosted", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sentence-transformers>=3.3",
    "qdrant-client>=1.13",
    "pymupdf>=1.25",
    "tokenizers>=0.21",
    "huggingface-hub>=0.27",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=25.1",
    "watchfiles>=1.0",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/qingl0ng/longmen"
Repository = "https://github.com/qingl0ng/longmen"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0",
    "ruff>=0.9",
    "mypy>=1.15",
]

[project.scripts]
ragsvc = "ragsvc.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragsvc"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
