[tool.poetry]
name = "longmen"
version = "1.0.0"
description = "Terminal client for the Longmen self-hosted coding assistant (requires a running Longmen gateway)"
authors = ["qingl0ng <qingl0ng@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qingl0ng/longmen"
repository = "https://github.com/qingl0ng/longmen"
documentation = "https://github.com/qingl0ng/longmen#readme"
keywords = ["llm", "coding-assistant", "self-hosted", "vllm", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
packages = [{include = "termassist", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
websockets = ">=15.0"
rich = ">=13.9"
prompt-toolkit = ">=3.0"
tomli-w = ">=1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
pytest-asyncio = ">=0.25"
pytest-cov = ">=7.0"
ruff = ">=0.9"
mypy = ">=1.15"

[tool.poetry.scripts]
longmen = "termassist.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
